# discord_bot

./: .gitignore  README.md  bot.py  cli.py  config.py  model.py  pyproject.toml
.github/workflows/: deploy.yml
